--- a/package.json
+++ b/package.json
@@ -13,22 +13,22 @@
     "start": "next start -p $PORT"
   },
   "dependencies": {
-    "eslint-plugin-jsx-a11y": "^6.0.2",
-    "next": "latest",
-    "prop-types": "^15.6.0",
-    "react": "^16.0.0",
-    "react-addons-css-transition-group": "^15.4.2",
-    "react-addons-transition-group": "^15.4.2",
-    "react-dom": "^16.0.0",
-    "react-modal": "^3.1.0"
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "next": "^5.1.0",
+    "prop-types": "^15.6.1",
+    "react": "^16.3.2",
+    "react-addons-css-transition-group": "^15.6.2",
+    "react-addons-transition-group": "^15.6.2",
+    "react-dom": "^16.3.2",
+    "react-modal": "^3.4.1"
   },
   "devDependencies": {
-    "babel-eslint": "^8.0.1",
-    "eslint": "^4.9.0",
+    "babel-eslint": "^8.2.3",
+    "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-react": "^7.4.0",
+    "eslint-plugin-import": "^2.11.0",
+    "eslint-plugin-react": "^7.7.0",
     "storybook": "^1.0.0"
   }
 }
